--- a/style.css
+++ b/style.css
@@ -1,36 +1,68 @@
-:root { font-size: 1.125rem; }
-@media (min-width: 600px) { :root { font-size: 1.5rem; } }
-@media (min-width: 900px) { :root { font-size: 1.75rem; } }
-@media (min-width: 1200px) { :root { font-size: 2rem; } }
-*, *:before, *:after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+*,
+*:before,
+*:after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
+    font-family: 'Girassol', cursive;
     width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center; /* Alligns items vertical */
-    align-items: center; /* Aligns items horizontal */
-    max-width: 80rem;
-    margin: 0 auto;
-    padding: 2rem;
+    min-height: 100vh;
     background-color: #121212;
 }
 
 a {
-  text-decoration: none;
-  color: rgb(214, 226, 43);
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.7)
+}
+
+.nav-bar {
+    font-size: 20px;
+    background-image: linear-gradient(to right top, #051937, #3d2f5e, #7b437c, #bf568e, #ff6f91);
+    padding-bottom: 10px;
+}
+
+.main-bar {
+    list-style-type: none;
+    display: none;
+}
+
+.main-bar li {
+    text-align: center;
+    margin: 10px auto;
+}
+
+.logo {
+    display: inline-block;
+    color: rgb(255, 255, 255);
+    font-size: 22px;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.navbar-toogle {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 24px;
+}
+
+.active {
+    display: block;
 }
 
 .messages {
-    overflow: auto;
-    /* width: 100vw;
-    max-height: 100vh; */
+    /* overflow: auto; */
     padding: 1rem .9rem;
-    color: white;
+    color: rgb(255, 255, 255);
+    margin: 0 auto;
+    text-align: left;
+    font-family: 'Courgette', cursive;
+    font-size: medium;
 }
 
 .bubble {
@@ -50,9 +82,8 @@ a {
 }
 
 .bubble.left {
-    background: rgba(160, 37, 63, 0.5);
+    background: #FF6F91;
 }
-
 
 .bubble:after {
     content: "";
@@ -61,33 +92,36 @@ a {
     left: -.5rem;
     width: .5rem;
     height: .5rem;
-    /* background-image: url(../img/corner.svg); */
     background-size: .5rem .5rem;
     background-position: .5rem 0;
     background-repeat: no-repeat;
     transition: background-position .15s ease-in;
-  }
-
+}
 
 .bubble.cornered:after {
     background-position: 0 0;
-  }
-  .bubble span {
+}
+
+.bubble span {
     display: block;
-  }
-  .bubble span.message {
+}
+
+.bubble span.message {
     opacity: 0;
-  }
-  .bubble a {
+}
+
+.bubble a {
     color: #0076FF;
-  }
-  .bubble .loading {
+}
+
+.bubble .loading {
     position: absolute;
     width: 2.25rem;
-    font-size: 2rem;
+    font-size: 1rem;
     line-height: 1rem;
-  }
-  .bubble .loading b {
+}
+
+.bubble .loading b {
     display: inline-block;
-    color: rgba(0,0,0,.5);
-  }
+    color: rgba(0, 0, 0, .5);
+}
